--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body style="margin: 0;">
-    <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xm8rsqe95e" width="100%" height="100%"
+    <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=1nsrf0qjiq" width="100%" height="100%"
         seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen
         style="overflow:hidden;height:100%;width:100%"></iframe>
 </body>
