--- a/index.html
+++ b/index.html
@@ -1,9 +1,87 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<body style="margin: 0;">
-    <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=1nsrf0qjiq" width="100%" height="100%"
-        seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen
-        style="overflow:hidden;height:100%;width:100%"></iframe>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;900&display=swap');
+
+    body {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="https://bubanc.s3.amazonaws.com/assets/images/logo_default_white.png" />
+      </a>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row d-none d-sm-block">
+      <div class="ratio ratio-16x9">
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=ciwt44spma&t=1621010913" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+      </div>
+    </div>
+    <div class="row d-block d-sm-none">
+      <div class="ratio ratio-1x1">
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=ciwt44spma&t=1621010913" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+        <a href="https://www.flipsnack.com/ADJOA/310_04-16.html" target="_blank">
+          <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/3aaf2437461f9b195a9f0ei118916885/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+        <a href="https://www.flipsnack.com/ADJOA/308_03_web.html" target="_blank">
+          <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/5882edc36ba15a4420db61i117639279/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+        <a href="https://www.flipsnack.com/ADJOA/february-real-estate-banc.html" target="_blank">
+
+          <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/093699d2083cfb32e47fb7i116500781/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+
+        </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+        <a href="https://www.flipsnack.com/ADJOA/307_01-web.html" target="_blank">
+
+          <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/1cc82cc18b88bf7acd5792i115334452/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+
+        </a>
+      </div>
+    </div>
+  </div>
+  
+  <footer class="footer mt-3">
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="col-xl-12 ">
+          <div class="copyright text-center footer-content ">
+            <p>© 2021 ADJOA - All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
