--- a/index.html
+++ b/index.html
@@ -38,25 +38,23 @@
   </div>
   <div class="container">
     <div class="row mt-3">
-      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
         <a href="https://www.flipsnack.com/ADJOA/310_04-16.html" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/3aaf2437461f9b195a9f0ei118916885/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
         </a>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="100">
         <a href="https://www.flipsnack.com/ADJOA/308_03_web.html" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/5882edc36ba15a4420db61i117639279/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
 
         </a>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="200">
         <a href="https://www.flipsnack.com/ADJOA/february-real-estate-banc.html" target="_blank">
-
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/093699d2083cfb32e47fb7i116500781/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
-
         </a>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-6">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="300">
         <a href="https://www.flipsnack.com/ADJOA/307_01-web.html" target="_blank">
 
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/1cc82cc18b88bf7acd5792i115334452/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
@@ -82,6 +80,9 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
