--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <title>부동산뱅크-미동부 최초/최대 부동산 전문 매거진</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta property="og:title" content="BUBANC/부동산뱅크" />
+  <meta property="og:description" content="미동부 최초/최대 부동산 전문 매거진" />
+  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/730d7f282cbc81fe48ecc8i120012504/covers/page_1/small" />
+  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/730d7f282cbc81fe48ecc8i120012504/covers/page_1/small" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
@@ -68,8 +73,8 @@
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-xl-12 ">
-          <div class="copyright text-center footer-content ">
-            <p>© 2021 ADJOA - All Rights Reserved.</p>
+          <div class="copyright text-center footer-content">
+            <p class="text-secondary">© 2021 ADJOA - All Rights Reserved.<br /><a class="text-primary text-decoration-none" href="tel:+12012019883">광고문의: 201-201-9883</a></p>
           </div>
         </div>
       </div>
