잡지 링크 수정

--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
-        <a href="https://www.flipsnack.com/ADJOA/310_04-16.html" target="_blank">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=1nsrf0qjiq&t=1618837838" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/3aaf2437461f9b195a9f0ei118916885/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="100">
-        <a href="https://www.flipsnack.com/ADJOA/308_03_web.html" target="_blank">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=x90ol58hp8&t=1615908114" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/5882edc36ba15a4420db61i117639279/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
 
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="200">
-        <a href="https://www.flipsnack.com/ADJOA/february-real-estate-banc.html" target="_blank">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c94m33xu3&t=1613492496" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/093699d2083cfb32e47fb7i116500781/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="300">
-        <a href="https://www.flipsnack.com/ADJOA/307_01-web.html" target="_blank">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xpsb80apma&t=1610827777" target="_blank">
 
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/1cc82cc18b88bf7acd5792i115334452/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
 
