7월 업데이트

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta property="og:title" content="BUBANC/부동산뱅크" />
   <meta property="og:description" content="미동부 최초/최대 부동산 전문 매거진" />
-  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/730d7f282cbc81fe48ecc8i120012504/covers/page_1/small" />
-  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/730d7f282cbc81fe48ecc8i120012504/covers/page_1/small" />
+  <meta property="og:image" content="https://d1dhn91mufybwl.cloudfront.net/collections/items/b4bc6b645719dba0a9c86ci122591714/covers/page_1/small" />
+  <meta property="og:image:secure_url" content="https://d1dhn91mufybwl.cloudfront.net/collections/items/b4bc6b645719dba0a9c86ci122591714/covers/page_1/small" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
