8월호 업데이트

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8" /> 
   <title>부동산뱅크-미동부 최초/최대 부동산 전문 매거진</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -32,17 +32,22 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hkfgm8nd1j&t=1626684935" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hkfgm8nd1j&t=1626684935" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row mt-3">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hkfgm8nd1j&t=1626684935" target="_blank">
+          <img src="https://cdn.flipsnack.com/collections/items/b4bc6b645719dba0a9c86ci122591714/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+        </a>
+      </div>
       <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
         <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xksv53co7k&t=1623841584" target="_blank">
           <img src="https://d1dhn91mufybwl.cloudfront.net/collections/items/641b40f73ecadcb8267f41i121351790/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
