--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta property="og:title" content="BUBANC/부동산뱅크" />
   <meta property="og:description" content="미동부 최초/최대 부동산 전문 매거진" />
-  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/1668329dc586323e674fbai123882009/covers/page_1/small" />
-  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/1668329dc586323e674fbai123882009/covers/page_1/small" />
+  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/243edcaa38a42957d30084i125045744/covers/page_1/small" />
+  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/243edcaa38a42957d30084i125045744/covers/page_1/small" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
@@ -32,17 +32,22 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u98w3f9zhm&t=1631800737" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u98w3f9zhm&t=1631800737" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row mt-3">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" target="_blank">
+          <img src="https://cdn.flipsnack.com/collections/items/1668329dc586323e674fbai123882009/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+        </a>
+      </div>
       <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
         <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hkfgm8nd1j&t=1626684935" target="_blank">
           <img src="https://cdn.flipsnack.com/collections/items/b4bc6b645719dba0a9c86ci122591714/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
