--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u98w3f9zhm&t=1631800737" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hji4mf9zhm&t=1632232740" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u98w3f9zhm&t=1631800737" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hji4mf9zhm&t=1632232740" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
