부뱅 10월달 반영

--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hji4mf9zhm&t=1632232740" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=cnao33pvxn&t=1634246269" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hji4mf9zhm&t=1632232740" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=cnao33pvxn&t=1634246269" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row mt-3">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
+        <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=hji4mf9zhm&t=1632232740" target="_blank">
+          <img src="https://cdn.flipsnack.com/collections/items/c985128b550bf3c3e05f86i125207015/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
+        </a>
+      </div>
       <div class="col-lg-4 col-md-4 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
         <a href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c8ri3krzp&t=1629134267" target="_blank">
           <img src="https://cdn.flipsnack.com/collections/items/1668329dc586323e674fbai123882009/covers/page_1/small" class="img-thumbnail" alt="bubanc-202104">
