11월호 업데이트

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=13a6puxwb1&t=1637052953" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=h3sri59zhm&t=1638607315" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=13a6puxwb1&t=1637052953" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=h3sri59zhm&t=1638607315" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
