12월 업데이트 변경

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta property="og:title" content="BUBANC/부동산뱅크" />
   <meta property="og:description" content="미동부 최초/최대 부동산 전문 매거진" />
-  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/b2a9f1e9e8cdd209217f53i128436859/covers/page_1/small" />
-  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/b2a9f1e9e8cdd209217f53i128436859/covers/page_1/small" />
+  <meta property="og:image" content="https://cdn.flipsnack.com/collections/items/f02743a1db044429e5d5f6i128474650/covers/page_1/small" />
+  <meta property="og:image:secure_url" content="https://cdn.flipsnack.com/collections/items/f02743a1db044429e5d5f6i128474650/covers/page_1/small" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
@@ -32,12 +32,12 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zpavsqlk9s&t=1639670823" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=v1mwif31ci&t=1639775672" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zpavsqlk9s&t=1639670823" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
+        <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=v1mwif31ci&t=1639775672" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen style="overflow:hidden;height:100%;width:100%"></iframe>
       </div>
     </div>
   </div>
