--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="https://i.ibb.co/HH7nmgp/bubanc-logo.png"
-            style="height: 25px"
+            src="https://i.ibb.co/5x8PVm1/logo-long-4x.png"
+            style="height: 20px"
           />
         </a>
       </div>
@@ -390,7 +390,8 @@
           <div class="col-xl-12">
             <div class="copyright text-center footer-content">
               <p class="text-secondary">
-                © 2021 ADJOA - All Rights Reserved.<br /><a
+                © 2021 ADJOA - All Rights Reserved.<br />2160 N Central Rd #112,
+                Fort Lee, NJ 07024<br /><a
                   class="text-primary text-decoration-none"
                   href="tel:+12012019883"
                   >광고문의: 201-201-9883</a
