--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       property="og:image"
-      content="https://cdn.flipsnack.com/collections/items/d74f67137ed2a9011ee8bci130789746/covers/page_1/small"
+      content="https://cdn.flipsnack.com/collections/items/cd756b2f57a73b9a484dcai131628431/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://cdn.flipsnack.com/collections/items/d74f67137ed2a9011ee8bci130789746/covers/page_1/small"
+      content="https://cdn.flipsnack.com/collections/items/cd756b2f57a73b9a484dcai131628431/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -125,7 +125,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zjl75mj7t9&t=1647528272"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9lb939zhm&t=1650380313"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -139,7 +139,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zjl75mj7t9&t=1647528272"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9lb939zhm&t=1650380313"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -153,6 +153,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zjl75mj7t9&t=1647528272"
+            target="_blank"
+          >
+            <img
+              src="https://cdn.flipsnack.com/collections/items/d74f67137ed2a9011ee8bci130789746/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-4 col-md-4 col-sm-6 col-6"
           data-aos="fade-up"
