--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       property="og:image"
-      content="https://cdn.flipsnack.com/collections/items/d74f67137ed2a9011ee8bci130789746/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/98e9f3e046b549f60b1361i132398318/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://cdn.flipsnack.com/collections/items/d74f67137ed2a9011ee8bci130789746/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/98e9f3e046b549f60b1361i132398318/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -125,7 +125,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zjl75mj7t9&t=1647528272"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpfg59j7t9&t=1652768810"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -139,7 +139,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zjl75mj7t9&t=1647528272"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpfg59j7t9&t=1652768810"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -154,7 +154,23 @@
     <div class="container">
       <div class="row mt-3">
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=u9lb939zhm&t=1650380313"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/cd756b2f57a73b9a484dcai131628431/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
+        <div
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -170,7 +186,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -186,7 +202,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -202,7 +218,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -218,7 +234,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -234,7 +250,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -250,7 +266,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -266,7 +282,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -282,7 +298,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -298,7 +314,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -314,7 +330,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -330,7 +346,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="100"
         >
@@ -346,7 +362,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="200"
         >
@@ -362,7 +378,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="300"
         >
@@ -379,7 +395,7 @@
         </div>
 
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="400"
         >
@@ -395,7 +411,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="500"
         >
@@ -411,7 +427,7 @@
           </a>
         </div>
         <div
-          class="col-lg-4 col-md-4 col-sm-6 col-6"
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="600"
         >
