2022년 5월 재업로드

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpfg59j7t9&t=1652768810"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zp5w3npvxn&t=1652804569"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -139,7 +139,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpfg59j7t9&t=1652768810"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zp5w3npvxn&t=1652804569"
             width="100%"
             height="100%"
             seamless="seamless"
