부뱅 6월 업데이트

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/98e9f3e046b549f60b1361i132398318/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/96c5e273454d87ec817f26i133231131/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/98e9f3e046b549f60b1361i132398318/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/96c5e273454d87ec817f26i133231131/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -125,7 +125,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zp5w3npvxn&t=1652804569"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpa6i5itk5&t=1655440567"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -139,7 +139,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zp5w3npvxn&t=1652804569"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpa6i5itk5&t=1655440567"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -153,6 +153,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=zp5w3npvxn&t=1652804569"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/62eeea53f4f0ce455cc00bi132411514/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-3 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
