--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/96c5e273454d87ec817f26i133231131/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/0e76525b6534d91caa7566i133897510/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/96c5e273454d87ec817f26i133231131/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/0e76525b6534d91caa7566i133897510/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -125,7 +125,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpa6i5itk5&t=1655440567"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658129471"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -139,7 +139,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpa6i5itk5&t=1655440567"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658129471"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -154,7 +154,23 @@
     <div class="container">
       <div class="row mt-3">
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dpa6i5itk5&t=1655440567"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/96c5e273454d87ec817f26i133231131/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -170,7 +186,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -186,7 +202,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -202,7 +218,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -218,7 +234,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -234,7 +250,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -250,7 +266,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -266,7 +282,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -282,7 +298,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -298,7 +314,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -314,7 +330,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -330,7 +346,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -346,7 +362,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -362,7 +378,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="0"
         >
@@ -378,7 +394,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="100"
         >
@@ -394,7 +410,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="200"
         >
@@ -410,7 +426,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="300"
         >
@@ -427,7 +443,7 @@
         </div>
 
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="400"
         >
@@ -443,7 +459,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="500"
         >
@@ -459,7 +475,7 @@
           </a>
         </div>
         <div
-          class="col-lg-3 col-md-3 col-sm-6 col-6"
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
           data-aos-delay="600"
         >
