--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="BUBANC/부동산뱅크" />
+    <meta property="og:site_name" content="BuBanc" />
+    <meta property="og:url" content="http://www.bubanc.com/index.php/kr/3" />
+    <link
+      rel="shortcut icon"
+      href="http://www.bubanc.com/templates/selio/assets/img/favicon.png"
+      type="image/png"
+    />
+    <link rel="canonical" href="http://www.bubanc.com/index.php/kr/3" />
     <meta
       property="og:description"
       content="미동부 최초/최대 부동산 전문 매거진"
