부뱅 9월 업데이트

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/0e76525b6534d91caa7566i133897510/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/f40ec0f48c2e11c2a8b271i134439670/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/0e76525b6534d91caa7566i133897510/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/f40ec0f48c2e11c2a8b271i134439670/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -133,7 +133,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658129471"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=c3fvl88unf&t=1661151375"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -147,7 +147,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658129471"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=c3fvl88unf&t=1661151375"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -161,6 +161,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658218652"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/a50ea549004ecee4de35e4i133922167/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
