--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=c3fvl88unf&t=1661155921"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGNsbzVmZmNqbA%3D%3D&t=1663646526"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -147,7 +147,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=c3fvl88unf&t=1661155921"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGNsbzVmZmNqbA%3D%3D&t=1663646526"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -161,6 +161,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=c3fvl88unf&t=1661200375"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/8f46ebb64485201efee437i135105364/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
