--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/8f46ebb64485201efee437i135105364/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d657d7ae244f02c5267d91i135111768/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/8f46ebb64485201efee437i135105364/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d657d7ae244f02c5267d91i135111768/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -133,7 +133,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGNsbzVmZmNqbA%3D%3D&t=1663646526"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dx96miitk5&t=1663678007"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -147,7 +147,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGNsbzVmZmNqbA%3D%3D&t=1663646526"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dx96miitk5&t=1663678007"
             width="100%"
             height="100%"
             seamless="seamless"
