--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>부동산뱅크-미동부 최초/최대 부동산 전문 매거진</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="Korean" />
+    <title>
+      부동산뱅크-미동부 최초/최대 부동산 전문 매거진 | 뉴저지 부동산 매거진 |
+      BuBanc
+    </title>
+    <meta
+      name="title"
+      content="부동산뱅크-미동부 최초/최대 부동산 전문 매거진 | 뉴저지 부동산 매거진 | BuBanc"
+    />
+    <meta
+      name="description"
+      content="뉴저지 최초/최대 부동산 전문 매거진 - 뉴저지 최대의 발행부수, 부동산 정보를 위한 최고의 매거진, 뉴저지 부동산(렌트, 콘도, 커머셜)의 렌트/매매/투자/관리를 위한 정보를 주로 취급하는 뉴저지 최고의 부동산 전문 매거진"
+    />
+    <meta
+      name="keywords"
+      content="뉴저지,뉴저지 부동산,부동산 잡지, 부동산 매거진, 렌트, 매매, 커머셜, New Jersey, New Jersey Real Estate, Real Estate, Real Estate Magazine"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="BUBANC/부동산뱅크" />
@@ -15,8 +31,18 @@
     />
     <link rel="canonical" href="http://www.bubanc.com/index.php/kr/3" />
     <meta
+      property="og:title"
+      content="부동산뱅크-미동부 최초/최대 부동산 전문
+    매거진 | 뉴저지 부동산 매거진 | BuBanc"
+    />
+    <meta
+      property="og:site_name"
+      content="부동산뱅크-미동부 최초/최대 부동산 전문 매거진"
+    />
+    <meta property="og:url" content="https://www.bubanc.com" />
+    <meta
       property="og:description"
-      content="미동부 최초/최대 부동산 전문 매거진"
+      content="뉴저지 최초/최대 부동산 전문 매거진 - 뉴저지 최대의 발행부수, 부동산 정보를 위한 최고의 매거진, 뉴저지 부동산(렌트, 콘도, 커머셜)의 렌트/매매/투자/관리를 위한 정보를 주로 취급하는 뉴저지 최고의 부동산 전문 매거진"
     />
     <meta
       property="og:image"
