2023 1월 업데이트

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/c8511c7300381df14ae3fei136976250/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/dcffd2fd2e47418b553871i137669565/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/c8511c7300381df14ae3fei136976250/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/dcffd2fd2e47418b553871i137669565/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreG4zcWhwbmQxag%3D%3D&t=1671609873"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGpxZGY1a3Z4bg%3D%3D&t=1675459101"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreG4zcWhwbmQxag%3D%3D&t=1671609873"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGpxZGY1a3Z4bg%3D%3D&t=1675459101"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -203,6 +203,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreG4zcWhwbmQxag%3D%3D&t=1673528597"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/2cc3168b77e44eb15d358ai137259353/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
@@ -262,22 +278,6 @@
           >
             <img
               src="https://d1dhn91mufybwl.cloudfront.net/collections/items/b922d7485b0dd8249d9245i134537451/covers/page_1/small"
-              class="img-thumbnail"
-              alt="bubanc-202104"
-            />
-          </a>
-        </div>
-        <div
-          class="col-lg-2 col-md-3 col-sm-6 col-6"
-          data-aos="fade-up"
-          data-aos-delay="0"
-        >
-          <a
-            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmlo5aspma&t=1658218652"
-            target="_blank"
-          >
-            <img
-              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/a50ea549004ecee4de35e4i133922167/covers/page_1/small"
               class="img-thumbnail"
               alt="bubanc-202104"
             />
