--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/acf9c80caf1f148216741fi139911462/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/4acf7b5202d9b3ec7c283di140254124/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/acf9c80caf1f148216741fi139911462/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/4acf7b5202d9b3ec7c283di140254124/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrejEzMjM1cGQxag%3D%3D&t=1687283628"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdTMyejgwaWhwOA%3D%3D&t=1689794825"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrejEzMjM1cGQxag%3D%3D&t=1687283628"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdTMyejgwaWhwOA%3D%3D&t=1689794825"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -203,6 +203,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrejEzMjM1cGQxag%3D%3D&t=1687283628"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/85c419ba6776431c00f17ei140127383/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
