2024년 1월 업데이트

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/hjs43nhbdc/items/f6e758d2202e24691b7b9di142032559/covers/page_1/small"
+      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tps7sfm1ci/items/b79e8120306e83cf362000i142334136/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/hjs43nhbdc/items/f6e758d2202e24691b7b9di142032559/covers/page_1/small"
+      content="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/tps7sfm1ci/items/b79e8120306e83cf362000i142334136/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGpzNDNuaGJkYw%3D%3D&forceWidget=1&t=1703253376"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdHBzN3NmbTFjaQ%3D%3D&forceWidget=1&t=1706211737"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGpzNDNuaGJkYw%3D%3D&forceWidget=1&t=1703253376"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrdHBzN3NmbTFjaQ%3D%3D&forceWidget=1&t=1706211737"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -203,6 +203,23 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMraGpzNDNuaGJkYw%3D%3D&forceWidget=1&t=1703253376"
+            target="_blank"
+          >
+            <img
+              src="https://d160aj0mj3npgx.cloudfront.net/5DE886B9E8C/collections/hjs43nhbdc/items/f6e758d2202e24691b7b9di142032559/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
+
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
@@ -727,55 +744,6 @@
           >
             <img
               src="https://d1dhn91mufybwl.cloudfront.net/collections/items/093699d2083cfb32e47fb7i116500781/covers/page_1/small"
-              class="img-thumbnail"
-              alt="bubanc-202104"
-            />
-          </a>
-        </div>
-        <div
-          class="col-lg-2 col-md-3 col-sm-6 col-6"
-          data-aos="fade-up"
-          data-aos-delay="300"
-        >
-          <a
-            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xpsb80apma&t=1610827777"
-            target="_blank"
-          >
-            <img
-              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/1cc82cc18b88bf7acd5792i115334452/covers/page_1/small"
-              class="img-thumbnail"
-              alt="bubanc-202104"
-            />
-          </a>
-        </div>
-
-        <div
-          class="col-lg-2 col-md-3 col-sm-6 col-6"
-          data-aos="fade-up"
-          data-aos-delay="400"
-        >
-          <a
-            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=7c829m97t9&t=1608087175"
-            target="_blank"
-          >
-            <img
-              src="https://cdn.flipsnack.com/collections/items/b2e23f65d0af503bda90eei114515139/covers/page_1/small"
-              class="img-thumbnail"
-              alt="bubanc-202104"
-            />
-          </a>
-        </div>
-        <div
-          class="col-lg-2 col-md-3 col-sm-6 col-6"
-          data-aos="fade-up"
-          data-aos-delay="500"
-        >
-          <a
-            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=uk92m53xu3&t=1605022064"
-            target="_blank"
-          >
-            <img
-              src="https://cdn.flipsnack.com/collections/items/3277f0236e0ac14c61e54fi113100112/covers/page_1/small"
               class="img-thumbnail"
               alt="bubanc-202104"
             />
